# colony-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: advance-colony.yml
src/: __init__.py  config.py  constants.py  environment.py  event_selector.py  events.py  history.md  interventions.py  mechanics.py  narrative.py  openai_selector.py  people.py  people_history.md  run_day.py  state.json
src/colony_sim/: events.py  history.md  mechanics.py  narrative.py  run_day.py  state.json
tests/: test_environment.py  test_event_selector.py  test_interventions.py  test_mechanics.py  test_people.py  test_run_day.py
