[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "colony-agent"
version = "0.1.0"
description = "A small stateful colony simulation loop."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colony_sim = ["state.json", "history.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

