[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "colony-agent"
version = "0.1.0"
description = "A small stateful colony simulation loop."
requires-python = ">=3.11"
dependencies = ["openai>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["state.json", "history.md", "people_history.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
